--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         script: |
           pm2 delete appEC2 || echo "No existing process found"
           ls
-          cd ProyectoEC2 
+          cd PracticaEC2 
           git pull origin main
           npm install
           npm run build
